# uv-export-test

./: .pre-commit-config.yaml  hello.py  pyproject.toml
src/lambda_a/: handler_a.py  pyproject.toml
src/lambda_b/: handler_b.py  pyproject.toml
