[project]
name = "uv-export-test"
dynamic = ["version"]
requires-python = "~=3.12"

[dependency-groups]
dev = [
    "pre-commit >= 4.0.1",
    "lambda-a",
    "lambda-b",
]

[tool.uv.sources]
lambda-a = { workspace = true }
lambda-b = { workspace = true }

[tool.uv.workspace]
members = ["src/*"]
exclude = ["src/*.egg-info"]

[tool.ruff]
ignore = [
    "B006", # use mutable data structures for argument defaults
]
line-length = 100
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # default / pycodestyle
    "F", # default / pyflakes
    "I", # isort
    "W", # pycodestyle
]
